--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
-    "concurrently": "^7.2.1",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
@@ -22,12 +21,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\"  \"json-server -p 3001 -w public/db.json\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "precommit": "lint-staged",
-    "server": "npx json-server --watch public/db.json --port=3001"
+    "server": "json-server --watch public/db.json --port=3001"
   },
   "eslintConfig": {
     "extends": [
